<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_weight="1"
    android:elevation="5dp"
    android:theme="@style/toolbar">


    <TextView
        android:id="@+id/amount_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_amount"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <ImageView
        android:id="@+id/navigate_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/account_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:text="@string/account_number"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/account_number_value_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigate_back" />

    <TextView
        android:id="@+id/account_number_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/dummy_account_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/account_number_tv"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/account_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/account_name"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toTopOf="@+id/account_name_value_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/account_number_tv" />

    <TextView
        android:id="@+id/account_name_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/dummy_account_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

