<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/total_amount_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="10dp"
    app:cardCornerRadius="20dp"
    app:strokeColor="@color/yellow"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/balance_cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_balance"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/i_have_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/i_have"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/i_have_amount_tv"
            app:layout_constraintEnd_toEndOf="@+id/i_have_amount_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/i_have_amount_tv"
            app:layout_constraintTop_toBottomOf="@+id/balance_tv" />

        <TextView
            android:id="@+id/i_owe_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_owe"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/i_have_tv"
            app:layout_constraintEnd_toEndOf="@+id/i_owe_amount_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/i_owe_amount_tv"
            app:layout_constraintTop_toTopOf="@+id/i_have_tv" />

        <TextView
            android:id="@+id/i_have_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dummy_amount"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/i_owe_amount_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/i_have_tv" />

        <TextView
            android:id="@+id/i_owe_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/dummy_amount"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/i_have_amount_tv"
            app:layout_constraintTop_toBottomOf="@+id/i_owe_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>